# talksheet

./: .pre-commit-config.yaml  README.md  pre-committ-config.yaml  pyproject.toml
sample_data/: employees.csv
talksheet/: talksheet.css  talksheet.py
talksheet/engine/: engine.py
talksheet/sample_data/: users.csv
