[tool.poetry]
name = "talksheet"
version = "0.9.0"
description = "Interact with flat files using natural languages"
authors = ["Daniel Palma <danivgy@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
talksheet = "talksheet.talksheet:app.run"

[tool.poetry.dependencies]
python = "^3.10"
langchain = "^0.0.100"
duckdb-engine = "^0.6.9"
python-dotenv = "^1.0.0"
openai = "^0.27.0"
textual = "^0.13.0"
duckdb = "^0.7.1"
pandas = "^1.5.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1.0"
textual = { extras = ["dev"], version = "^0.13.0" }
openai = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable Pyflakes `E` and `F` codes by default.
select = ["E", "F"]
ignore = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
